--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -267,7 +267,7 @@ discussion ,/n./@讨论;
 disgusting ,/adj./@令人厌恶的;
 dispersion ,/n./@分散;,/n./@流散;,/n./@離散;,/n./@散佈;,/n./@消散;,/n./@彌散;,/n./@色散;,/n./@散開;
 dispossess ,/vt./@剥夺;
-disruption ,/n./@破坏;
+disruption ,/n./@破坏;,/n./@分裂;,/n./@瓦解;,/n./@中斷;,/n./@崩潰;,/n./@扰乱;
 disruptive ,/adj./@破坏性的;,/adj./@引起混亂的;,/adj./@顛覆性的;
 distillery ,/n./@蒸餾;
 distortion ,/n./@扭曲;,/n./@失真;,/n./@變形;
