--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -285,6 +285,7 @@ multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
 Neanderthal ,/n./@尼安德特人;,/adj./@尼安德特人的;
 Neitherland ,/n./@荷兰;,/n./@尼德兰;
+nightmarish ,/adj./@噩夢般的;,/adj./@惡夢般的;,/adj./@夢魘般的;
 nonchalance ,/n./@冷淡;
 nondescript ,/adj./@無以名狀的;,/adj./@難以歸類的;,/adj./@難以形容的;
 nonsensical ,/adj./@无意义的;,/adj./@荒谬的;
@@ -342,6 +343,7 @@ proficiency ,/n./@熟练;,/n./@精通;
 progression ,/n./@前進;,/n./@連續;
 progressive ,/adj./@進步的;,/adj./@前進的;
 prohibition ,/n./@禁止;
+proliferate ,/v./@激增;,/v./@猛增;,/v./@增殖;,/v./@暴增;,/v./@擴散;
 promiscuous ,/adj./@混雜的;
 proprietary ,/n./@所有权;,/n./@所有人;,/adj./@私人所有的;,/adj./@专利的;,/adj./@私營的;,/adj./@專賣的;
 prosecution ,/n./@迫害;
@@ -422,6 +424,7 @@ temperament ,/n./@气质;,/n./@性情;
 temperature ,/n./@气温;
 termination ,/n./@终止;
 terminology ,/n./@术语;,/n./@术语学;
+testimonial ,/n./@證明書;,/n./@推薦書;,/n./@推薦信;,/n./@嘉獎;,/n./@獎品;,/n./@褒揚狀;,/n./@感謝狀;,/n./@紀念品;
 tetrahedron ,/n./@四面體;
 theological ,/adj./@神學的;,/adj./@神學上的;
 theoretical ,/adj./@理論的;
@@ -445,6 +448,7 @@ troublesome ,/adj./@令人煩惱的;,/adj./@討厭的;,/adj./@麻煩的;,/adj./@
 ultraphonic ,/adj./@超声的;,/n./@超声;
 ultraviolet ,/adj./@紫外的;,/adj./@紫外線的;,/n./@紫外線;,/n./@紫外光;
 unbeknownst ,/adj./@不知道的;,/adj./@不知的;
+unchartered ,/adj./@未經許可的;,/adj./@未得特許狀的;,/adj./@未受特許的;
 underground ,/adj./@在地下;,/adj./@地下的;,/n./@地铁;,/n./@地下组织;
 undoubtedly ,/adj./@毋庸置疑的;
 unequivocal ,/adj./@毫不含糊的;,/adj./@明確的;
