--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -35,7 +35,7 @@ quintessential ,/adj./@精髓的;,/adj./@精粹的;
 recommendation ,/n./@推荐;,/n./@建议;
 reconciliation ,/n./@和解;,/n./@调和;,/n./@调停;,/n./@和谐;
 representation ,/n./@代表;
-representative ,/n./@代表;
+representative ,/n./@代表;,/adj./@代表性的;,/adj./@典型的;,/adj./@代表的;,/adj./@代議制的;
 representitive ,/n./@代表;
 responsibility ,/n./@责任;
 sensationalism ,/n./@追求轟動效應;,/n./@官能主義;,/n./@追求轟動效應的題材;,/n./@嘩眾取寵;
