--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -478,7 +478,7 @@ hymn ,/n./@讚美詩;,/n./@聖歌;
 hype ,/v./@大肆宣傳;,/n./@不实宣传;,/n./@宣传骗局;,/vt./@夸张地宣传;
 hypo ,/redirected./@target="hypodermic";
 i've ,/v./@我已;
-icon ,/n./@圖標;
+icon ,/n./@圖標;,/n./@畫像;,/n./@聖像;,/n./@象徵;,/n./@標識符;,/n./@圖示;,/n./@偶像;,/n./@代表性人物;
 idea ,/n./@想法;
 idle ,/adj./@閑的;,/adj./@懶惰的;
 idol ,/n./@偶像;
