--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -511,6 +511,7 @@ fudge ,/n./@軟糖;,/n./@胡説;,/n./@謊話;,/v./@捏造;,/v./@欺騙;
 fugue ,/n./@賦格曲;
 fully ,/adv./@完全;,/adv./@徹底;
 funny ,/adj./@有趣的;,/adj./@可笑的;
+furry ,/adj./@毛皮的;,/adj./@覆有毛皮的;,/adj./@毛皮製的;,/adj./@毛皮般的;
 fussy ,/adj./@易煩惱的;,/adj./@愛挑剔的;,/adj./@難以取悅的;
 fuzzy ,/adj./@模糊的;,/adj./@失眞的;
 gamer ,/n./@玩家;
