--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -119,7 +119,7 @@ August ,/n./@八月;
 author ,/n./@作者;
 autism ,/n./@自閉症;
 autumn ,/n./@秋;
-avatar ,/n./@頭像;,/n./@化身;,/n./@替身;
+avatar ,/n./@頭像;,/n./@化身;,/n./@虛擬化身;,/n./@替身;,/n./@人物圖標;
 avenue ,/n./@大街;
 aviate ,/v./@飛行;
 avowal ,/n./@聲明;,/n./@承認;,/n./@宣佈;
@@ -1488,6 +1488,7 @@ theory ,/n./@理論;
 thesis ,/n./@論文;
 thirst ,/n./@渴望;
 Thomas ,/n./@托馬斯;
+thorny ,/adj./@多刺的;,/adj./@有刺的;,/adj./@長滿荊棘的;,/adj./@棘手的;,/adj./@麻煩的;,/adj./@困難的;,/adj./@有爭議的;
 though ,/conj./@雖然;
 thrall ,/n./@奴隸;,/n./@奴僕;,/n./@奴役;,/n./@束縛;
 thrash ,/vt./@打;,/vi./@打谷;
@@ -1556,6 +1557,7 @@ unless ,/prep./@除非;
 unload ,/v./@卸貨;
 unlock ,/v./@解鎖;,/v./@開啓;
 unreal ,/adj./@不眞實的;
+unroll ,/vt./@展開;,/vt./@鋪開;,/vt./@展現;
 unseen ,/vt./@未看見的;,/vt./@看不見的;
 unsung ,/adj./@未唱的;,/adj./@埋沒的;
 unveil ,/v./@揭開;,/v./@揭露;
