--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -395,7 +395,7 @@ deplete ,/v./@耗盡;,/v./@用盡;,/v./@衰竭;
 deplore ,/v./@譴責;,/v./@哀悼;
 deposit ,/v./@存放;,/v./@儲蓄;,/n./@存款;,/n./@押金;,/n./@訂金;,/n./@沉澱;,/v./@沉澱;
 depress ,/v./@壓抑;
-deprive ,/vt./@剝奪;
+deprive ,/vt./@剝奪;,/vt./@奪走;,/vt./@搶走;,/vt./@使喪失;
 derange ,/v./@擾亂;,/v./@錯亂;
 descend ,/v./@下降;,/v./@遗传;
 descent ,/n./@血統;,/n./@世襲;
@@ -441,7 +441,7 @@ disobey ,/v./@違反;,/v./@不服從;
 display ,/v./@顯示;
 dispose ,/v./@處理;
 dispute ,/v./@爭論;
-disrupt ,/v./@破壞;
+disrupt ,/v./@破壞;,/vt./@分裂;,/vt./@瓦解;,/vt./@中斷;,/vt./@擾亂;
 dissect ,/vt./@解剖;,/vt./@剖析;,/vt./@分析;
 dissent ,/n./@異議;,/n./@不信國教;
 distant ,/adj./@遙遠的;
@@ -710,13 +710,13 @@ imitate ,/v./@模仿;
 immerse ,/vt./@浸沒;,/vt./@浸泡;,/vt./@沉浸;,/vt./@施浸禮於;
 immoral ,/adj./@不道德的;,/adj./@堕落的;
 impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
-impetus ,/n./@动力;,/n./@推动力;,/n./@促进;,/n./@推动;
+impetus ,/n./@动力;,/n./@推动力;,/n./@促进;,/n./@推动;,/n./@促進因素;
 implant ,/vt./@移植;,/vt./@植入;,/vt./@灌輸;,/n./@移植;,/n./@移植物;
 implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
 imprint ,/n./@印痕;,/vt./@壓印;,/vt./@蓋章;,/vt./@銘刻;
 improve ,/v./@改善;
-impulse ,/n./@衝動;,/n./@脈衝;
+impulse ,/n./@衝動;,/n./@脈衝;,/n./@推動力;
 incisor ,/n./@門牙;,/n./@前齒;
 incline ,/v./@贊同;,/v./@傾斜;
 include ,/v./@包括;
