--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -391,6 +391,7 @@ dominant ,/adj./@显性的;
 dominate ,/v./@控制;,/v./@支配;,/v./@统治;
 dominion ,/n./@主权;
 donation ,/n./@捐赠;
+dopamine ,/n./@多巴胺;
 doubtful ,/adj./@怀疑的;
 doughnut ,/n./@甜甜圈;
 dovetail ,/vi./@吻合;,/vt./使@吻合;
@@ -464,7 +465,7 @@ exchange ,/v./@交换;
 exciting ,/adj./@令人兴奋的@<excite的正在进行时>;
 exemplar ,/n./@模範;,/n./@範例;,/n./@典型;
 exercise ,/n./@鍛煉;,/n./@練習;
-exertion ,/n./@发挥;,/n./@运用;,/n./@费力;,/n./@尽力;
+exertion ,/n./@发挥;,/n./@运用;,/n./@费力;,/n./@尽力;,/n./@努力;,/n./@竭尽;,/n./@行使;,/n./@施加;,/n./@竭力;
 existent ,/adj./@存在的;
 exorcise ,/vt./@驅除@邪魔;,/v./@設法忘卻;,/vt./@消除;
 exorcize ,/redirected./@target="exorcise";
@@ -537,6 +538,7 @@ generous ,/adj./@慷慨的;
 genitive ,/adj./@所有格的;,/n./@所有格;,/adj./@屬格的;,/n./@屬格;
 genocide ,/n./@種族滅絕;,/n./@種族屠殺;
 geometry ,/n./@幾何學;
+gigantic ,/adj./@巨大的;,/adj./@龐大的;
 gimmicky ,/adj./@耍花招的;,/adj./@華而不實的;,/adj./@作噱頭的;
 glorious ,/adj./@壮丽的;,/adj./@光荣的;
 glossary ,/n./@詞匯表;,/n./@術語表;
@@ -569,6 +571,7 @@ haystack ,/n./@乾草堆;
 headache ,/n./@头痛;
 headline ,/n./@头条;
 hedgehog ,/n./@刺猬;
+hedonism ,/n./@享樂主義;,/n./@快樂主義;
 hegemony ,/n./@霸權;,/n./@領導權;
 henchman ,/n./@亲信;,/n./@黨羽;,/n./@爪牙;,/n./@幫兇;,/n./@侍从;
 heraldry ,/n./@纹章学;,/n./@盛典;
@@ -1027,7 +1030,7 @@ ruminate ,/v./@沉思;,/v./@反芻;,/vi./@反复思考;
 ruthless ,/adj./@冷酷的;,/adj./@殘忍的;,/adj./@無情的;,/adj./@堅決的;
 sabotage ,/n./@破坏;,/n./@妨碍;
 saboteur ,/n./@蓄意破壞者;
-sadistic ,/adj./@虐待狂的;
+sadistic ,/adj./@虐待狂的;,/adj./@施虐狂的;,/adj./@殘酷成性的;
 sanction ,/n./@批准;,/n./@认可;
 Sanskrit ,/n./@梵文;,/n./@梵語;,/adj./@梵文的;,/adj./@梵語的;
 Saturday ,/n./@星期六;
