--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -108,6 +108,7 @@ autonomic ,/adj./@自治的;,/adj./@自發的;
 auxiliary ,/adj./@辅助的;,/n./@辅助者;,/n./@助动词;
 available ,/adj./@可用的;
 avalanche ,/n./@雪崩;,/n./@山崩;,/n./@大批;
+avatarism ,/n./@化身主義;
 awestruck ,/adj./@充滿敬畏的;
 backslash ,/n./@反斜杠;
 backwater ,/n./@逆流水;,/n./@落後地區;,/n./@荒僻的地方;,/n./@與世隔絕的地方;
@@ -689,7 +690,7 @@ necessary ,/adj./@必要的;
 nefarious ,/adj./@邪惡的;,/adj./@惡毒的;
 negotiate ,/v./@协商;
 newsstand ,/n./@報攤;,/n./@雜誌攤;
-nightmare ,/n./@梦魇;
+nightmare ,/n./@梦魇;,/n./@噩夢;,/n./@惡夢;
 normalize ,/v./@正常化;
 nostalgic ,/adj./@懷舊的;
 notoriety ,/n./@惡名;,/n./@聲名狼藉;
@@ -750,7 +751,7 @@ patronage ,/n./@贊助;,/n./@資助;,/n./@保護人身份;
 patronize ,/v./@保護;
 pedagogic ,/adj./@教师的;,/adj./@教育学的;
 pedometer ,/n./@計步器;
-pedophile ,/n./@恋童癖者;
+pedophile ,/redirected./@target="paedophile";
 penetrate ,/v./@渗透;,/v./@穿透;,/v./@貫穿;
 peninsula ,/n./@半島;
 pentagram ,/n./@五角星;
@@ -1041,6 +1042,7 @@ triumphal ,/adj./@慶祝勝利的;,/adj./@凱旋的;
 turbulent ,/adj./@动荡的;
 umbilical ,/adj./@脐带的;
 unanimous ,/adj./@一致的;,/adj./@意见一致的;,/adj./@一致通過的;
+uncharted ,/adj./@地圖上未標明的;,/adj./@未经探测的;,/adj./@未知领域的;
 underline ,/v./@强调;
 undermine ,/v./@暗中破坏;
 undertake ,/v./@從事;,/v./@承擔;
