--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -285,6 +285,7 @@ multinomial
 nationality
 Neanderthal
 Neitherland
+nightmarish
 nonchalance
 nondescript
 nonsensical
@@ -342,6 +343,7 @@ proficiency
 progression
 progressive
 prohibition
+proliferate
 promiscuous
 proprietary
 prosecution
@@ -422,6 +424,7 @@ temperament
 temperature
 termination
 terminology
+testimonial
 tetrahedron
 theological
 theoretical
@@ -445,6 +448,7 @@ troublesome
 ultraphonic
 ultraviolet
 unbeknownst
+unchartered
 underground
 undoubtedly
 unequivocal
