--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1488,6 +1488,7 @@ theory
 thesis
 thirst
 Thomas
+thorny
 though
 thrall
 thrash
@@ -1556,6 +1557,7 @@ unless
 unload
 unlock
 unreal
+unroll
 unseen
 unsung
 unveil
