--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -391,6 +391,7 @@ dominant
 dominate
 dominion
 donation
+dopamine
 doubtful
 doughnut
 dovetail
@@ -537,6 +538,7 @@ generous
 genitive
 genocide
 geometry
+gigantic
 gimmicky
 glorious
 glossary
@@ -569,6 +571,7 @@ haystack
 headache
 headline
 hedgehog
+hedonism
 hegemony
 henchman
 heraldry
