--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -108,6 +108,7 @@ autonomic
 auxiliary
 available
 avalanche
+avatarism
 awestruck
 backslash
 backwater
@@ -1041,6 +1042,7 @@ triumphal
 turbulent
 umbilical
 unanimous
+uncharted
 underline
 undermine
 undertake
