--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -112,6 +112,7 @@ countermand ,/v./@取消;
 counterpart ,/n./@相当的物;
 credibility ,/n./@可信性;,/n./@真实性;,/n./@可靠性;
 cultivation ,/n./@培养;,/n./@耕作;
+cybernetics ,/n./@控制論;,/n./@神經機械學;,/n./@控制學;
 cylindrical ,/adj./@圓柱形的;
 dangerously ,/adv./@危险地;
 declaration ,/n./@声明;
