--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -72,6 +72,7 @@ ankle ,/n./@踝;
 annoy ,/v./@惹惱;,/v./@(使)煩惱;
 annul ,/v./@宣告無效;
 antic ,/adj./@滑稽可笑的;
+antsy ,/adj./@烦躁的;,/adj./@焦躁的;,/adj./@急躁的;,/adj./@不耐煩的;,/adj./@迫不及待的;,/adj./@坐立不安的;,/adj./@急切的;
 aorta ,/n./@主動脈;
 apart ,/adv./@分離;,/adj./@分離的;
 appal ,/v./@驚嚇;,/v./@減弱;,/v./@變得蒼白;
@@ -111,6 +112,7 @@ bacon ,/n./@鹹肉;,/n./@熏肉;
 badge ,/n./@徽章;,/n./@標記;
 bagel ,/n./@硬面包圈;
 baker ,/n./@麵包師;
+banal ,/adj./@平庸的;,/adj./@陳腐的;,/adj./@陳詞濫調的;,/adj./@乏味的;
 Bantu ,/n./@班圖人;,/n./@班圖語;
 baron ,/n./@男爵;,/n./@領主;
 basic ,/adj./@基礎的;,/adj./@基本的;
@@ -280,7 +282,7 @@ comic ,/adj./@滑稽的;
 comma ,/n./@逗號;,/n./@停頓;
 conga ,/n./@康茄舞;
 coral ,/n./@珊瑚;
-corny ,/adj./@穀類的;,/adj./@粗野的;
+corny ,/adj./@穀類的;,/adj./@陳腔濫調的;,/adj./@陳腐的;,/adj./@老套的;,/adj./@老掉牙的;,/adj./@平淡乏味的;,/adj./@粗野的;
 couch ,/n./@躺椅;,/n./@長沙發;
 cough ,/v./@咳嗽;,/n./@咳嗽;
 could ,/aux./<can的過去式>@能;
@@ -559,6 +561,7 @@ green ,/n./@綠色;,/adj./@綠色的;
 grief ,/n./@悲哀;
 grill ,/v./@燒;,/v./@烤;,/v./@拷問;,/n./@烤架;,/n./@烤肉;
 grind ,/v./@碾碎;,/v./@磨碎;,/n./@苦差;,/n./@研磨;,/vt./@压迫;
+gripe ,/n./@腹痛;,/n./@腸絞痛;,/n./@不滿;,/n./@牢騷;,/n./@抱怨;,/vi./@腹痛;,/vi./@腸絞痛;,/vt./@握緊;,/vt./@抓牢;,/vi./@訴苦;,/vi./@抱怨;,/vi./@發牢騷;
 groan ,/v./@呻吟;
 groom ,/n./@新郎;
 gross ,/adj./@總的;,/adj./@粗糙的;,/adj./@粗野的;,/adj./@惡劣的;
@@ -787,7 +790,7 @@ needy ,/adj./@贫穷的;,/n./@穷人;
 Negro ,/n./@黑人;
 nerve ,/n./@神經;,/n./@膽量;
 never ,/adv./@從來不;,/adv./@從不會;
-niche ,/n./@壁龕;,/n./@合適的職業;,/n./@專營市場;
+niche ,/n./@壁龕;,/n./@合適的職業;,/n./@專營市場;,/n./@生態龕;,/n./@生態位;,/n./@適宜的小環境;,/n./@利基;
 night ,/n./@晚上;
 noble ,/adj./@髙貴的;,/n./@貴族;
 noise ,/n./@噪音;,/n./@聲音;
@@ -1301,7 +1304,7 @@ treat ,/vt./@對待;,/v./@醫治;
 trend ,/n./@趨勢;,/n./@趨向;,/n./@傾向;,/n./@走向;,/vi./@趨向;,/vi./@傾向;
 trial ,/n./@試驗;,/n./@嘗試;
 trick ,/n./@詭計;,/n./@竅門;,/v./@欺詐;,/v./@哄騙;
-trite ,/adj./@平庸的;,/adj./@陳腐的;,/adj./@老生常谈的;
+trite ,/adj./@平庸的;,/adj./@陳腐的;,/adj./@老套的;,/adj./@老生常談的;
 troll ,/v./@輪唱;,/v./@拖餌釣魚;,/n./@輪唱;,/n./@拖餌釣魚;
 troop ,/n./@軍隊;
 trope ,/n./@轉義;,/n./@比喻;,/n./@隱喻;,/n./@寓意;,/n./@說法;,/n./@修辭;,/n./@基調;,/n./@橋段;
