--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -364,6 +364,7 @@ curtly ,/adv./@簡略地;
 curtsy ,/n./@屈膝禮;,/vi./@行屈膝禮;
 cussed ,/adj./@固執的;
 custom ,/n./@風俗;,/n./@習慣;
+cyborg ,/n./@電子人;,/n./@半機械人;
 cypher ,/n./@零;
 Dacian ,/n./@達契亞人;,/adj./@達契亞的;
 daemon ,/n./@魔鬼;,/n./@惡魔;
