--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -827,6 +827,7 @@ marital ,/adj./@婚姻的;,/adj./@夫妻間的;
 marquee ,/n./@華蓋;,/n./@選取框;
 massage ,/n./@按摩;
 matador ,/n./@斗牛士;
+mawkish ,/adj./@矯情的;,/adj./@做作的;,/adj./@虛情假意的;,/adj./@無病呻吟的;,/adj./@多愁善感的;
 maximum ,/n./@最大値;
 meander ,/n./@河曲;,/n./@曲徑;,/v./@蜿蜒;,/v./@閒逛;,/v./@漫談;
 meaning ,/n./@意義;,/n./@意思;
