--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -72,6 +72,7 @@ ankle
 annoy
 annul
 antic
+antsy
 aorta
 apart
 appal
@@ -111,6 +112,7 @@ bacon
 badge
 bagel
 baker
+banal
 Bantu
 baron
 basic
@@ -559,6 +561,7 @@ green
 grief
 grill
 grind
+gripe
 groan
 groom
 gross
