--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -83,6 +83,7 @@ disadvantage ,/n./@不利;
 disagreement ,/n./@争执;,/n./@不符;
 disconsolate ,/adj./@憂鬱的;,/adj./@鬱鬱不樂的;
 discriminate ,/vt./@歧視;,/vt./@辨別;,/vt./@區別;,/vi./@辨別;
+disingenuous ,/adj./@不誠實的;,/adj./@不坦率的;,/adj./@虛偽的;
 dissemblance ,/n./@偽裝;
 distillation ,/n./@蒸餾;
 distribution ,/n./@分布;,/n./@分配;
