--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -216,7 +216,7 @@ commotion ,/n./@騷亂;
 communism ,/n./@共產主義;
 communist ,/n./@共產主義者;
 community ,/n./@社会;,/n./@社區;,/n./@社团;,/n./@团体;,/n./@群落;
-companion ,/n./@同伴;,/n./@伴侶;
+companion ,/n./@同伴;,/n./@伴侶;,/n./@夥伴;,/n./@陪護;,/n./(成對的物件中的)@一件;,/n./@指南;,/n./@手冊;
 competent ,/adj./@有能力的;
 complaint ,/n./@抱怨;
 compliant ,/adj./@順從的;
