--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -220,6 +220,7 @@ counteract ,/v./@抵消;,/v./@抵抗;,/v./@中和;,/v./@阻礙;
 courageous ,/adj./@勇敢的;
 credential ,/n./@證書;,/n./@憑據;,/n./@國書;
 cross-talk ,/n./@相声;
+crustacean ,/n./@甲殼綱動物;,/adj./@甲殼綱的;
 curriculum ,/n./@課程;
 deactivate ,/v./@停用;,/v./@遣散;
 decapitate ,/vt./@斬首;
