--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -301,6 +301,7 @@ oscillation ,/n./@震盪;,/n./@振動;,/n./@擺動;
 outstanding ,/adj./@杰出的;,/adj./@出类拔萃的;
 overlapping ,/adj./@重叠的;
 paradoxical ,/adj./@自相矛盾的;,/adj./@似是而非的;
+parasitical ,/adj./@寄生的;
 parentheses ,/n./@括號;,/n./@圓括號;
 participant ,/adj./@参与的;,/adj./@参与者;
 participate ,/v./@参与;
@@ -320,7 +321,7 @@ persistence ,/n./@执意;
 personality ,/n./@个性;
 perspective ,/n./@观点;,/n./@视角;
 pessimistic ,/adj./@悲观的;
-planetarium ,/n./@天文館;,/n./@天文臺;
+planetarium ,/n./@天文館;,/n./@天文臺;,/n./@天象儀;,/n./@行星儀;,/n./@天體運轉模型;
 poltergeist ,/n./@搗蛋鬼;
 pomegranate ,/n./@石榴;,/n./@石榴树;
 pontificate ,/n./@教宗職權;,/n./@教宗任期;
