--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -238,6 +238,7 @@ surrealistic ,/adj./@超現實主義的;
 surroundings ,/n./@周遭;
 surveillance ,/n./@监视;
 suspiciously ,/adv./@怀疑地;
+technologist ,/n./@技術專家;,/n./@技術人員;,/n./@工藝學家;
 togetherness ,/n./@團結友愛;,/n./@和睦相處;,/n./@親密無間;
 transcendent ,/adj./@超常的;,/adj./@傑出的;,/adj./@超然的;,/adj./@卓越的;,/adj./@超越一切的;
 translucence ,/n./@半透明;
