--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -209,7 +209,7 @@ nag ,/v./@嘮叨;,/v./@煩擾;,/n./@老馬;
 nap ,/n./@小睡;,/n./@打盹;,/n./@疏忽;
 net ,/n./@網;
 new ,/adj./@新的;
-nit ,/n./@虱卵;
+nit ,/n./@虱卵;,/n./@蟲卵;,/n./@幼蟲;
 nod ,/v./@點頭;
 non ,/adj./@非@...的;
 nor ,/adv./@也不;,/conj./@也不;
