--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -484,6 +484,7 @@ idle ,/adj./@閑的;,/adj./@懶惰的;
 idol ,/n./@偶像;
 inc. ,/n./@股份有限公司;
 into ,/prep./@進入;
+iris ,/n./@虹膜;,/n./@鳶尾屬植物;,/n./@鳶尾;,/n./@虹;,/n./@虹彩;,/adj./@鳶尾屬植物的;
 iron ,/n./@鐵;,/n./@熨斗;,/v./@熨平;
 it's ,/n.&v./@這是;,/n.&v./@它是;
 itch ,/n./@癢;,/vi./@发痒;,/vi./@渴望;,/n./@渴望;
@@ -548,6 +549,7 @@ less ,/adj./@更少;
 lest ,/v./@防止;,/conj./@以免;
 lewd ,/adj./@好色的;,/adj./@淫蕩的;,/adj./@淫秽的;,/adj./@下流的;,/adj./@猥褻的;
 liar ,/n./@騙子;
+lice ,/redirected./@target="louse";
 life ,/n./@生活;,/n./@人生;,/n./@生命;
 lift ,/v./@提起;,/v./@舉起;,/n./@電梯;
 like ,/v./@喜歡;,/prep./@像;
