--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -439,6 +439,7 @@ exist ,/v./@存在;
 expel ,/v./@驅逐;
 extra ,/adj./@額外的;
 fable ,/n./@寓言;
+facet ,/n./@琢面;,/n./@方面;
 faint ,/n./@眩暈;
 faith ,/n./@信念;
 false ,/adj./@假@的;,/adj./@錯的;
@@ -472,7 +473,7 @@ flash ,/n.//v./@閃光;,/v./@反射;
 flask ,/n./@燒瓶;,/n./@酒瓶;
 fleet ,/n./@艦隊;,/n./@船隊;
 flesh ,/n./@鮮肉;
-flick ,/v./@輕彈;
+flick ,/v./@輕彈;,/vt./@輕拂;,/vt./@輕打;
 fling ,/v./@扔;,/v./@抛;,/vt./@擲;,/vt./@猛推;,/vi./@猛衝;
 flint ,/n./@燧石;,/n./@打火石;
 flirt ,/v./@调情;,/v./@挑逗;,/v./@戏弄;
@@ -517,7 +518,7 @@ furry ,/adj./@毛皮的;,/adj./@覆有毛皮的;,/adj./@毛皮製的;,/adj./@毛
 fussy ,/adj./@易煩惱的;,/adj./@愛挑剔的;,/adj./@難以取悅的;
 fuzzy ,/adj./@模糊的;,/adj./@失眞的;
 gamer ,/n./@玩家;
-gamut ,/n./@全音階;,/n./@整個範圍;
+gamut ,/n./@全音階;,/n./@整個範圍;,/n./@全範圍;,/n./@全部;,/n./@音域;
 gauge ,/v./@測量;
 gaunt ,/adj./@憔悴的;,/adj./@荒凉的;,/adj./@枯瘦的;
 geese ,/n.//pl./@鵝;
@@ -541,6 +542,7 @@ glyph ,/n./@字形;,/n./@圖像字符;
 gnome ,/n./@格言;
 gonna ,/aux./@會;
 goods ,/n./@商品;,/n./@貨物;
+goofy ,/adj./@愚蠢的;,/adj./@愚笨的;,/adj./@滑稽的;,/adj./@古怪的;
 goose ,/n./@鹅;
 gorge ,/n./@峽谷;,/n./@咽喉;
 gouge ,/vt./@鑿;,/vt./@挖;
@@ -706,6 +708,7 @@ logic ,/n./@邏輯;
 login ,/v./@登錄;,/v./@注冊;,/n./@登錄;
 Logos ,/n./神的@話;,/n./神的@道;
 loose ,/adj./@松的;
+louse ,/n./@虱子;
 lousy ,/adj./@討厭的;,/adj./@污穢的;
 lover ,/n./@情人;
 lower ,/v./@放下;,/adj./@較低的;
@@ -744,6 +747,7 @@ metal ,/n./@金屬;,/adj./@金屬制的;
 meter ,/n./@量器;,/n./@儀表;
 metre ,/n./@米;
 metro ,/n./@地鐵;,/adj./@大城市的;
+micra ,/redirected./@target="micron";
 midst ,/n./@中間;
 might ,/aux./@可能;,/n./@勢力;,/n./@威力;
 mimic ,/v./@模仿;,/adj./@模仿的;
@@ -868,7 +872,7 @@ piece ,/n./@片;,/n./@塊;
 piety ,/n./@虔誠;,/n./@孝敬;
 piker ,/n./@膽小鬼;
 pilot ,/n./@飛行員;
-pinch ,/v./@捏;,/v./@掐;,/v./@擠;
+pinch ,/v./@捏;,/v./@掐;,/v./@擠;,/n./@捏;,/n./@撮;,/n./@少量;
 pious ,/adj./@虔誠的;
 pitch ,/vt./@投擲;,/n./@強度;,/n./@音高;,/n./@场地;,/vt./@投;,/vt./@擲;,/n./@投球;,/n./@傾斜度;,/n./@顛簸;,/vt./@搭@(帳篷);,/vt./@紮@(營);
 pivot ,/n./@樞軸;,/n./@中心點;,/adj./@樞軸的;
@@ -1041,7 +1045,7 @@ serve ,/v./@服務;,/v./@服役;,/v./@任職;
 seven ,/n./@七;
 sever ,/v./@割斷;,/v./@分開;
 shack ,/n./@棚屋;
-shade ,/n./@樹蔭;,/n./@陰影;
+shade ,/n./@樹蔭;,/n./@陰影;,/n./@色度;,/n./@濃淡;,/n./@細微的差別;
 shaft ,/n./@豎井;,/n./@軸桿;,/n./@柄;,/v./@利用;,/n./@箭桿;,/n./@通風井;,/n./@升降機井;
 shake ,/v./@搖;,/v./@抖;
 shaky ,/adj./@搖晃的;,/adj./@顫抖的;,/adj./@不穩固的;,/adj./@發抖的;,/adj./@不可靠的;,/adj./@成問題的;
