--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -273,6 +273,7 @@ cheeky ,/adj./@放肆的;
 cheese ,/n./@乳酪;
 cheque ,/n./@支票;
 cherry ,/n./@櫻桃;
+chilli ,/redirected./@target="chili";
 chisel ,/v./@雕刻;
 choice ,/n./@選擇;
 chorus ,/n./@合唱曲;
@@ -295,7 +296,10 @@ client ,/n./@客戶;,/n./@用户;,/n./@顧客;
 climax ,/n./@高潮;,/n./@頂點;
 clinic ,/n./@診所;
 clique ,/n./@派係;
+clompy ,/redirected./@target="clumpy";
+clumpy ,/adj./@笨重的;,/adj./@多塊的;,/adj./@沉重的;
 clumsy ,/adj./@笨拙的;
+clunky ,/adj./@笨重的;,/adj./@過時的;,/adj./@難用的;,/adj./@哐啷作響的;,/adj./@哐噹作響的;
 clutch ,/v./@抓緊;
 coarse ,/adj./@粗糙的;,/adj./@粗的;,/adj./@粗劣的;,/adj./@粗俗的;,/adj./@粗魯的;
 cocoon ,/n./@茧;,/n./@蚕茧;
@@ -751,7 +755,7 @@ injury ,/n./@傷害;
 inmate ,/n./@同住者;,/n./@同院病人;,/n./@同狱犯人;
 insane ,/adj./@瘋狂的;
 insect ,/n./@昆蟲;
-insert ,/v./@插入;
+insert ,/v./@插入;,/vt./@嵌入;,/n./@插入物;,/n./@鑲嵌物;
 inside ,/prep./在...@內;
 insist ,/v./@堅持;
 instil ,/vt./@滴注;,/vt./@逐漸灌輸;
@@ -888,6 +892,7 @@ mental ,/adj./@精神的;
 merely ,/adv./@僅;
 meteor ,/n./@流星;,/n./@大氣現象;
 method ,/n./@方法;
+micron ,/n./@微米;,/n./@百萬分之一米;
 middle ,/adj./@中間的;
 midget ,/n./@矮子;,/n./@侏儒;
 mildew ,/n./@霉;,/v./@發霉;
@@ -997,6 +1002,7 @@ orient ,/adj./@東方的;
 origin ,/n./@起源;
 ornate ,/adj./@華麗的;,/adj./@裝飾的;,/adj./@华美的;,/adj./@豪华的;
 orphan ,/n./@孤兒;
+orrery ,/n./@太陽系儀;
 others ,/pron./@其他人;
 ouster ,/n./@驅逐;,/n./@罷黜;,/n./@剝奪;
 outlaw ,/n./@亡命之徒;,/vt./@禁止;,/vt./@放逐;
@@ -1416,6 +1422,7 @@ stocky ,/adj./@矮胖的;
 stoned ,/v./@擲石頭;,/adj./@去核的;,/adj./@醉酒的;
 storey ,/n./@樓層;
 strain ,/v./@抑制;
+strand ,/n./@海濱;,/n./@海灘;,/n./@河岸;,/n./@湖岸;,/n./@河灘;,/n./@湖濱;,/v./@擱淺;,/v./@困住;
 streak ,/n./@條紋;,/v./@飛跑;,/n./@光線;,/n./@礦脈;
 stream ,/n./@水流;
 street ,/n./@街道;
