--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -361,7 +361,7 @@ curious ,/adj./@好奇的;
 current ,/adj./@當今;
 curtail ,/n./@削減;,/n./@剝奪;
 curtain ,/n./@窗簾;,/n./@幕布;
-cushion ,/n./@墊子;,/n./@靠墊;
+cushion ,/n./@墊子;,/n./@靠墊;,/n./@減震墊;,/n./@緩衝物;,/vt./@緩衝;
 custody ,/v./@保管;,/v./@監護;,/n./@监禁;,/n./@拘留;
 cutlery ,/n./@刀具;,/n./@餐具;,/n./@刀叉;,/n./@餐刀;
 cyanide ,/n./@氰化物;
@@ -776,6 +776,7 @@ laborer ,/n./@勞工;,/n./@勞動者;
 lacquer ,/n./@漆;,/n./@漆器;,/v./@塗@漆;
 lambast ,/v./@鞭打;,/v./@痛斥;
 lantern ,/n./@燈籠;
+latency ,/n./@延遲;,/n./@潛伏;,/n./@潛伏期;,/n./@潛在因素;
 lateral ,/adj./@橫向的;,/adj./@側向的;,/adj./@侧面的;
 lattice ,/n./@晶格;,/n./@框架;,/n./@結構;,/n./@格子;
 launder ,/v./@洗滌;,/v./@清洗;
