--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -792,6 +792,7 @@ narcotic ,/n./@致幻毒品;,/n./@催眠藥;,/n./@麻醉劑;,/adj./@麻醉的;
 nasalize ,/vt./@鼻音化;
 national ,/adj./@国家的;,/adj./@民族的;
 nativity ,/n./@耶稣的诞生;
+nauseous ,/adj./@想嘔吐的;,/adj./@令人作嘔的;,/adj./@噁心的;,/adj./@令人噁心的;,/adj./@感到噁心的;
 nautical ,/adj./@航海的;
 navigate ,/v./@航行;,/v./@航空;
 necklace ,/n./@项链;
@@ -846,6 +847,7 @@ oriental ,/adj./@東方的;
 original ,/adj./@原始的;,/adj./@最初的;
 ornament ,/n./@裝飾;,/n./@裝飾品;
 outburst ,/n./@爆发;
+outdated ,/adj./@過時的;,/adj./@舊式的;,/adj./@陳舊的;
 outdoors ,/adv./@室外的;
 outright ,/adj./@全部的;,/adj./@徹底的;
 overcome ,/v./@克服;
