--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -110,6 +110,7 @@ available ,/adj./@可用的;
 avalanche ,/n./@雪崩;,/n./@山崩;,/n./@大批;
 avatarism ,/n./@化身主義;
 awestruck ,/adj./@充滿敬畏的;
+backplane ,/n./@底板;
 backslash ,/n./@反斜杠;
 backwater ,/n./@逆流水;,/n./@落後地區;,/n./@荒僻的地方;,/n./@與世隔絕的地方;
 bacterium ,/n./@細菌;
@@ -129,6 +130,7 @@ betrothal ,/n./@訂婚;,/n./@婚約;
 bilateral ,/adj./@兩邊的;,/adj./@雙邊的;,/adj./@左右對稱的;,/adj./@雙方的;
 billboard ,/n./@广告牌;
 bimonthly ,/n./@双月刊;
+binocular ,/adj./@雙眼的;,/adj./@雙目的;,/adj./@雙眼用的;,/adj./@雙目鏡;,/adj./@雙筒望遠鏡;,/adj./@雙目顯微鏡;
 biography ,/n./@传记;
 biometric ,/adj./@生物特徵識別的;,/adj./@生物統計的;,/adj./@生物測定的;
 blacklist ,/n./@黑名單;
@@ -358,7 +360,7 @@ duplicate ,/v./@复制;
 dysentery ,/n./@痢疾;
 dystopian ,/adj./@反面烏托邦的;
 earnestly ,/adv./@认真地;
-eccentric ,/adj./@古怪的;
+eccentric ,/adj./@古怪的;,/adj./@不正圓的;,/adj./@偏心的;,/adj./@不同圓心的;,/n./@古怪的人;,/n./@偏心圓;,/n./@偏心輪;
 economist ,/n./@经济学家;
 edematous ,/adj./@浮腫的;,/adj./@水腫的;
 editorial ,/n./@社論;,/adj./@编辑的;
@@ -737,6 +739,7 @@ paragraph ,/n./@段落;,/n./@節;
 paramedic ,/n./@醫務護理人員;,/n./@醫務輔助人員;
 parameter ,/n./@參數;,/n./@參量;
 paramount ,/adj./@首要的;,/adj./@至高無上的;
+parasitic ,/redirected./@target="parasitical";
 parchment ,/n./@羊皮紙;
 parochial ,/adj./@教區的;,/adj./@狹小的;,/adj./@地方範圍的;
 partially ,/adv./@部分地;
@@ -1065,6 +1068,7 @@ vegetable ,/n./@蔬菜;,/n./@植物;,/adj./@蔬菜的;,/adj./@植物的;
 vehemence ,/n./@熱情;
 vengeance ,/n./@报复;,/n./@复仇;
 ventricle ,/n./@室;,/n./@心室;,/n./@腦室;
+versatile ,/adj./@多功能的;,/adj./@多才多藝的;,/adj./@多用途的;,/adj./@多種用途的;,/adj./@隨機應變的;,/adj./@多方面適用的;,/adj./@萬用的;
 vibration ,/n./@振動;,/n./@顫動;,/n./@震動;
 viewpoint ,/n./@观点;
 vigilance ,/n./@警戒;
