--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -4,9 +4,11 @@ contemporaneous
 democratization
 dichotomization
 distinguishable
+electrochromism
 electromagnetic
 experimentation
 hypoproteinemia
+interchangeable
 neuroplasticity
 notwithstanding
 perspectiveness
