--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -439,6 +439,7 @@ exist
 expel
 extra
 fable
+facet
 faint
 faith
 false
@@ -541,6 +542,7 @@ glyph
 gnome
 gonna
 goods
+goofy
 goose
 gorge
 gouge
@@ -706,6 +708,7 @@ logic
 login
 Logos
 loose
+louse
 lousy
 lover
 lower
@@ -744,6 +747,7 @@ metal
 meter
 metre
 metro
+micra
 midst
 might
 mimic
