--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -273,6 +273,7 @@ cheeky
 cheese
 cheque
 cherry
+chilli
 chisel
 choice
 chorus
@@ -295,7 +296,10 @@ client
 climax
 clinic
 clique
+clompy
+clumpy
 clumsy
+clunky
 clutch
 coarse
 cocoon
@@ -888,6 +892,7 @@ mental
 merely
 meteor
 method
+micron
 middle
 midget
 mildew
@@ -997,6 +1002,7 @@ orient
 origin
 ornate
 orphan
+orrery
 others
 ouster
 outlaw
@@ -1416,6 +1422,7 @@ stocky
 stoned
 storey
 strain
+strand
 streak
 stream
 street
