--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -792,6 +792,7 @@ narcotic
 nasalize
 national
 nativity
+nauseous
 nautical
 navigate
 necklace
@@ -846,6 +847,7 @@ oriental
 original
 ornament
 outburst
+outdated
 outdoors
 outright
 overcome
