--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -110,6 +110,7 @@ available
 avalanche
 avatarism
 awestruck
+backplane
 backslash
 backwater
 bacterium
@@ -129,6 +130,7 @@ betrothal
 bilateral
 billboard
 bimonthly
+binocular
 biography
 biometric
 blacklist
@@ -737,6 +739,7 @@ paragraph
 paramedic
 parameter
 paramount
+parasitic
 parchment
 parochial
 partially
@@ -1065,6 +1068,7 @@ vegetable
 vehemence
 vengeance
 ventricle
+versatile
 vibration
 viewpoint
 vigilance
