--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -147,7 +147,7 @@ biology ,/n./@生物學;
 bipolar ,/adj./@有兩極的;,/adj./@躁郁的;
 biscuit ,/n./@餅干;
 bivouac ,/n./@露營;,/n./@露宿;
-bizarre ,/adj./@奇異的;
+bizarre ,/adj./@奇異的;,/adj./@離奇的;,/adj./@異乎尋常的;
 bladder ,/n./@膀胱;
 blanket ,/n./@地毯;
 blatant ,/adj./@明显的;,/adj./@公然的;,/adj./@露骨的;
@@ -1335,6 +1335,7 @@ surmise ,/vt./@推測;,/vt./@猜測;,/vt./@臆測;
 surname ,/n./@名字;
 surpass ,/v./@超過;,/vt./@勝過;,/vt./@優於;,/vt./@多於;,/vt./@大於;
 surplus ,/n./@剩餘;,/n./@盈餘;,/n./@過剩;,/adj./@剩餘的;,/adj./@過剩的;
+surreal ,/adj./@超現實的;,/adj./@離奇的;,/adj./@夢幻般的;,/adj./@荒诞的;
 survive ,/v./@存活;,/v./@幸存;
 suspect ,/v./@懷疑;
 suspend ,/v./@懸浮;,/v./@停學;
