--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -108,6 +108,7 @@ bridegroom ,/n./@新郎;
 brightness ,/n./@明亮;,/n./@光辉;
 burdensome ,/adj./@沉重的;
 bureaucrat ,/n./@官僚;
+Cabalistic ,/redirected./@target="Kabbalistic";
 calculator ,/n./@計算器;
 camerlengo ,/n./@教皇内侍;
 cannonball ,/n./@炮弹;
@@ -603,6 +604,7 @@ provincial ,/adj./@省的;,/adj./@外省的;,/adj./@外鄉的;
 psychopath ,/n./@精神病人;
 pubescence ,/n./@青春期;,/n./@軟毛;
 pugnacious ,/adj./@好战的;,/adj./@好斗的;
+Qabalistic ,/redirected./@target="Kabbalistic";
 quadcopter ,/n./@四翼飛行器;,/n./@四軸飛行器;
 quintuplet ,/n./@五胞胎之一;
 radicalism ,/n./@激进主义;
