--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -40,6 +40,7 @@ blogosphere ,/n./@博客圈;
 bourgeoisie ,/n./@中产阶级;
 braggadocio ,/n./@自夸;,/n./@吹牛;
 bureaucracy ,/n./@官僚主義;
+Cabbalistic ,/redirected./@target="Kabbalistic";
 calculation ,/n./@计算;
 calibration ,/n./@校準;,/n./@測定;,/n./@標定;,/n./@刻度;
 carnivorous ,/adj./@食肉的;
