--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -133,6 +133,7 @@ transactional ,/adj./@交易的;,/adj./@事務性的;
 Transcaucasia ,/n./@外高加索;
 transcription ,/n./@抄寫;,/n./@抄本;,/n./@抄錄;,/n./@轉錄;
 transgression ,/n./@罪過;,/n./@違法;,/n./@違反;,/n./@犯罪;
+transliterate ,/vt./@音譯;,/vt./@直譯;,/vt./@字符轉化;,/vt./@拼寫;,/vt./@字符轉寫;,/vt./@字符轉換;
 transnational ,/adj./@跨国的;
 uncomfortable ,/adj./@不舒服的;
 unconditional ,/adj./@无条件的;
