--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -225,6 +225,7 @@ butter ,/n./@黃油;
 button ,/n./@按鈕;,/n./@紐扣;
 buyout ,/n./@控股权收购;,/n./@收購;
 bypass ,/v./@繞開;,/v./@忽視;
+Cabala ,/redirected./@target="Kabbalah";
 cackle ,/v./@饒舌;,/v./@喋喋不休;
 caliph ,/n./@哈里发@(穆斯林国家的统治者);
 camera ,/n./@照相機;
