--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -190,6 +190,7 @@ bustard ,/n./@大鴇;
 butcher ,/n./@屠夫;
 buttock ,/n./@半邊臀部;
 cabbage ,/n./@捲心菜;,/n./@圓白菜;
+Cabbala ,/redirected./@target="Kabbalah";
 cabinet ,/n./@內閣;,/n./@壁櫥;,/n./@座舱;,/n./@柜;
 calcium ,/n./@钙;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
@@ -764,6 +765,7 @@ journal ,/n./@期刊;,/n./@日誌;
 journey ,/n./@旅行;
 Jupiter ,/n./@木星;
 justify ,/v./@證明;
+Kabbala ,/redirected./@target="Kabbalah";
 kashrut ,/n./@猶太教飲食教規;,/n./@猶太教飲食規定;
 ketchup ,/n./@蕃茄醬;
 kidding ,/n./@開玩笑;
@@ -1098,6 +1100,7 @@ purpose ,/n./@目的;,/n./@用途;,/n./@企圖;
 pursuit ,/v./@追求;
 purview ,/n./@視野;,/n./@範圍;,/n./@眼界;
 pyramid ,/n./@金字塔;
+Qabalah ,/redirected./@target="Kabbalah";
 qualify ,/v./@限制;,/v./@合格;,/v./@授權;
 quality ,/n./@質量;
 quantum ,/n./@量子;
