--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -161,6 +161,8 @@ building ,/n./@建筑;
 bulkhead ,/n./@艙壁;,/n./@隔板;,/n./@隔牆;,/n./@堤岸;
 burglary ,/n./@盗窃;
 business ,/n./@事務;,/n./@買賣;,/n./@行業;,/n./@商業;,/n./@商號;
+Cabalism ,/redirected./@target="Kabbalism";
+Cabalist ,/redirected./@target="Kabbalist";
 calabash ,/n./@葫蘆;,/n./@瓢;,/n./@加拉巴果;,/n./@加拉巴木;
 Calabria ,/n./@卡拉布里亞;
 calamity ,/n./@災難;
@@ -675,6 +677,7 @@ judicial ,/adj./@司法的;
 junction ,/n./@会合处;,/n./@交叉路口;
 Jurassic ,/n./@侏羅紀;,/adj./@侏羅紀的;
 juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
+Kabbalah ,/n./@卡巴拉;
 kangaroo ,/n./@袋鼠;
 kashruth ,/redirected./@target="kashrut";
 keyboard ,/n./@键盘;
@@ -894,7 +897,8 @@ pedigree ,/n./@血统;,/adj./@纯种的;
 penalize ,/v./@惩罚;
 pendulum ,/n./@摆;
 penitent ,/adj./@懺悔的;,/adj./@悔過的;
-pentagon ,/n./@五边形;,/n./@五角形;
+pentacle ,/n./@五角星;,/n./@護身符;
+pentagon ,/n./@五边形;,/n./@五角形;,/n./(the Pentagon)@五角大廈;,/n./(the Pentagon)@美國國防部;
 penumbra ,/n./@半阴影;,/n./@半影;
 perceive ,/v./@察觉;,/v./@理解;,/v./@領悟;,/v./@感知;,/v./@意识到;
 periodic ,/adj./@周期的;
@@ -967,6 +971,8 @@ punctual ,/adj./@准时的;
 puncture ,/v./@刺穿;,/vt./@刺破;
 punitive ,/adj./@惩罚性的;,/adj./@苛刻的;
 purchase ,/v./@购买;
+Qabalism ,/redirected./@target="Kabbalism";
+Qabalist ,/redirected./@target="Kabbalist";
 quackery ,/n./@庸医的医术;,/n./@欺骗行为;
 quantity ,/n./@量;
 question ,/n./@问题;
