--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -150,6 +150,8 @@ broadband ,/n./@宽带;
 broadcast ,/n./@广播;
 bumblebee ,/n./@熊蜂;,/n./@大黃蜂;
 butterfly ,/n./@蝴蝶;
+Cabbalism ,/redirected./@target="Kabbalism";
+Cabbalist ,/redirected./@target="Kabbalist";
 cafeteria ,/n./@自助餐廳;
 Calabrian ,/n./@卡拉布里亞人;,/adj./@卡拉布里亞的;,/adj./@卡拉布里亞人的;
 calculate ,/v./@计算;
@@ -566,6 +568,7 @@ indelible ,/adj./@不可磨滅的;,/adj./@不可消除的;,/adj./@難忘的;
 indemnity ,/n./@保險補償;,/n./@保障;,/n./@保險;,/n./@補償;,/n./@賠償;,/n./@免罰;,/n./@免罪;,/n./@賠款;
 indignant ,/adj./@愤慨的;
 indulgent ,/adj./@放纵的;,/adj./@宽容的;,/adj./@任性的;
+ineffable ,/adj./@無法形容的;,/adj./@難以描述的;,/adj./@不可言說的;,/adj./@難以形容的;,/adj./@不可言喻的;,/adj./@難以表達的;,/adj./@說不出的;
 infection ,/n./@感染;,/n./@传染;
 inflation ,/n./@膨胀;
 influence ,/n./@影响;
@@ -615,6 +618,8 @@ itinerary ,/n./@旅程;
 jellyfish ,/n./@水母;
 judgement ,/n./@判決;,/n./@意見;,/n./@判斷;
 judicious ,/adj./@明智的;
+Kabbalism ,/n./@卡巴拉主義;,/n./@卡巴拉學;,/n./@猶太教神秘主義;,/n./@犹太教神秘释经学;
+Kabbalist ,/n./@卡巴拉主義者;,/n./@卡巴拉學信徒;,/n./@卡巴拉人士;
 katabatic ,/adj./@下降的;,/adj./@下吹的;
 kazillion ,/redirected./@target="gazillion";
 kilderkin ,/n./@基德爾欽;,/n./@小桶;,/n./@十六加侖的量;,/n./@十八加侖的量;,/n./@1/2桶的量;
@@ -707,6 +712,8 @@ obscurity ,/n./@晦涩;,/n./@默默无闻;,/n./@難解;,/n./@隱匿;,/n./@卑微
 obsession ,/n./@迷戀;,/n./@沉迷;,/n./@癡迷;
 obstinacy ,/n./@固執;
 obstinate ,/adj./@頑固的;,/adj./@固執的;
+occultism ,/n./@神祕主義;,/n./@神祕論;,/n./@神祕學;
+occultist ,/n./@神祕主義者;,/n./@神祕論者;
 occurrent ,/adj./@正在發生的;
 octagonal ,/adj./@八角形的;,/adj./@八边形的;
 offensive ,/adj./@冒犯的;
@@ -757,7 +764,7 @@ pedometer ,/n./@計步器;
 pedophile ,/redirected./@target="paedophile";
 penetrate ,/v./@渗透;,/v./@穿透;,/v./@貫穿;
 peninsula ,/n./@半島;
-pentagram ,/n./@五角星;
+pentagram ,/n./@五角星;,/n./@五角星形;
 perimeter ,/n./@周長;,/n./@周界;
 periphery ,/n./@圓周;,/n./@周圍;,/n./@外围;,/n./@次要位置;,/n./@次要部分;,/n./@體表;,/n./@末梢;
 permanent ,/adj./@持久的;,/adj./@永恒的;
