--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -108,6 +108,7 @@ bridegroom
 brightness
 burdensome
 bureaucrat
+Cabalistic
 calculator
 camerlengo
 cannonball
@@ -603,6 +604,7 @@ provincial
 psychopath
 pubescence
 pugnacious
+Qabalistic
 quadcopter
 quintuplet
 radicalism
