--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -190,6 +190,7 @@ bustard
 butcher
 buttock
 cabbage
+Cabbala
 cabinet
 calcium
 canvass
@@ -764,6 +765,7 @@ journal
 journey
 Jupiter
 justify
+Kabbala
 kashrut
 ketchup
 kidding
@@ -1098,6 +1100,7 @@ purpose
 pursuit
 purview
 pyramid
+Qabalah
 qualify
 quality
 quantum
