--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -161,6 +161,8 @@ building
 bulkhead
 burglary
 business
+Cabalism
+Cabalist
 calabash
 Calabria
 calamity
@@ -675,6 +677,7 @@ judicial
 junction
 Jurassic
 juvenile
+Kabbalah
 kangaroo
 kashruth
 keyboard
@@ -894,6 +897,7 @@ pedigree
 penalize
 pendulum
 penitent
+pentacle
 pentagon
 penumbra
 perceive
@@ -967,6 +971,8 @@ punctual
 puncture
 punitive
 purchase
+Qabalism
+Qabalist
 quackery
 quantity
 question
