--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -150,6 +150,8 @@ broadband
 broadcast
 bumblebee
 butterfly
+Cabbalism
+Cabbalist
 cafeteria
 Calabrian
 calculate
@@ -566,6 +568,7 @@ indelible
 indemnity
 indignant
 indulgent
+ineffable
 infection
 inflation
 influence
@@ -615,6 +618,8 @@ itinerary
 jellyfish
 judgement
 judicious
+Kabbalism
+Kabbalist
 katabatic
 kazillion
 kilderkin
@@ -707,6 +712,8 @@ obscurity
 obsession
 obstinacy
 obstinate
+occultism
+occultist
 occurrent
 octagonal
 offensive
