--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -606,6 +606,7 @@ pubescence ,/n./@青春期;,/n./@軟毛;
 pugnacious ,/adj./@好战的;,/adj./@好斗的;
 Qabalistic ,/redirected./@target="Kabbalistic";
 quadcopter ,/n./@四翼飛行器;,/n./@四軸飛行器;
+quadrangle ,/n./@四邊形;,/n./@四方院子;
 quintuplet ,/n./@五胞胎之一;
 radicalism ,/n./@激进主义;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
@@ -723,6 +724,7 @@ telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
 television ,/n./@电视;
 temptation ,/n./@诱惑;
 tenebrific ,/redirected./@target="tenebrous";
+tetragraph ,/n./@方塊字;,/n./@四合字母;,/n./@四重音字;,/n./@四重字;
 thoughtful ,/adj./@深思的;
 throughout ,/prep./@貫穿;,/adv./@全部;
 throughput ,/n./@生產量;
