--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -422,7 +422,7 @@ diction ,/n./@措辭;
 digital ,/adj./@數字的;
 dignify ,/vt./@使高貴;,/vt./@使有尊嚴;
 dignity ,/n./@尊嚴;
-digraph ,/n./@二合字母;
+digraph ,/n./@二合字母;,/n./@二重音字;,/n./@二重字;
 digress ,/v./@離題;,/v./@跑題;
 diorama ,/n./@透视模型;,/n./@立體模型;,/n./@仿真模型;,/n./@透视缩影;,/n./@透視圖畫;
 dioxide ,/n./@二氧化物;
