--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -576,6 +576,7 @@ hedgehog ,/n./@刺猬;
 hedonism ,/n./@享樂主義;,/n./@快樂主義;
 hegemony ,/n./@霸權;,/n./@領導權;
 henchman ,/n./@亲信;,/n./@黨羽;,/n./@爪牙;,/n./@幫兇;,/n./@侍从;
+heptagon ,/n./@七边形;,/n./@七角形;
 heraldry ,/n./@纹章学;,/n./@盛典;
 heritage ,/n./@遗产;,/n./@传统;
 hesitant ,/adj./@猶豫的;,/adj./@遲疑的;
@@ -1224,7 +1225,7 @@ transmit ,/v./@傳輸;,/v./@傳播;
 treasure ,/n./@财宝;
 treasury ,/n./@金库;
 trespass ,/v./@擅闖;,/v./@侵入;,/v./@冒犯;,/v./@打擾;,/vi./@犯罪;,/n./@罪過;,/n./@非法侵入;
-triangle ,/n./@三角形;,/n./@三角;
+triangle ,/n./@三角形;,/n./@三角;,/n./@三角形之物;,/n./@三角鐵;,/n./@三角板;,/n./@三件套;,/n./@三角關係;,/n./@三角星座;
 tribunal ,/n./@法庭;,/n./@仲裁机构;,/n./@公斷;,/n./@法官席;
 trillion ,/n./@万亿;
 tropical ,/adj./@熱帶的;,/adj./@炎熱潮濕的;,/adj./@轉義的;,/adj./@回歸線的;
