--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -870,7 +870,7 @@ recognize ,/v./@认识;,/v./@意识;
 recollect ,/v./@记起;
 recommend ,/v./@推荐;
 reconcile ,/v./@和解;,/v./@调停;
-rectangle ,/n./@矩形;,/n./@长方形;
+rectangle ,/n./@矩形;,/n./@长方形;,/n./@長方形物;
 recumbent ,/adj./@斜倚的;,/adj./@休息的;
 recurrent ,/adj./@反復出現的;,/adj./@定期重複的;,/adj./@週期性的;,/adj./@一再發生的;
 recursive ,/adj./@遞歸的;
