--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -107,6 +107,7 @@ procrastinate ,/vi./@拖延;
 pronunciation ,/n./@發音;,/n./@讀法;,/n./@讀音;
 psychological ,/adj./@心理学的;
 psychosomatic ,/adj./@心理压力造成的;
+quadrilateral ,/n./@四邊形;,/adj./@四邊形的;,/adj./@四邊的;
 qualification ,/n./@资格;,/n./@条件;,/n./@限制;,/n./@赋予资格;
 questionnaire ,/n./@问卷;
 regimentation ,/n./@严格控制;,/n./@严密管制;
