--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -606,6 +606,7 @@ pubescence
 pugnacious
 Qabalistic
 quadcopter
+quadrangle
 quintuplet
 radicalism
 radiosonde
@@ -723,6 +724,7 @@ telepathic
 television
 temptation
 tenebrific
+tetragraph
 thoughtful
 throughout
 throughput
