--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -673,6 +673,7 @@ separation ,/n./@分離;,/n./@間隔;,/n./@分開;
 Septuagint ,/n./@七十士譯本聖經;
 settlement ,/n./@解决;,/n./@定居地;
 shopkeeper ,/n./@店主;
+silhouette ,/n./@輪廓;,/n./@剪影;,/n./@侧影;
 similarity ,/n./@類似;
 simplicity ,/n./@簡單;,/n./@簡樸;,/n./@單純;
 skepticism ,/n./@懷疑論;,/n./@懷疑態度;
