--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -34,7 +34,7 @@ photorealistic ,/adj./@逼真的;,/adj./@照相寫實主義的;
 proprioception ,/n./@本體感受;
 quintessential ,/adj./@精髓的;,/adj./@精粹的;
 recommendation ,/n./@推荐;,/n./@建议;
-reconciliation ,/n./@和解;,/n./@调和;,/n./@调停;,/n./@和谐;
+reconciliation ,/n./@和解;,/n./@调和;,/n./@调停;,/n./@和谐;,/n./@和好;,/n./@調解;,/n./@对账;
 representation ,/n./@代表;
 representative ,/n./@代表;,/adj./@代表性的;,/adj./@典型的;,/adj./@代表的;,/adj./@代議制的;
 representitive ,/n./@代表;
