--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -724,7 +724,7 @@ opportune ,/adj./@及時的;,/adj./@湊巧的;
 orchestra ,/n./@管弦樂隊;,/n./@交響樂;
 originate ,/v./@创始;,/vt./@發明;,/vt./@引發;,/vt./@創作;
 orphanage ,/n./@孤兒院;
-oscillate ,/v./@震盪;,/v./@擺動;
+oscillate ,/v./@震盪;,/v./@擺動;,/v./@振盪;,/v./@搖擺;
 ostracize ,/v./@排斥;,/v./@排擠;,/v./@孤立;
 otherwise ,/conj.//adv./@否則;,/adv./@另外;,/adj./@另外的;
 outermost ,/adj./@最外的;
