--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -24,6 +24,8 @@ adhere ,/v./@依附;,/v./@粘附;,/vi./@遵守;,/vi./@堅持;
 adjust ,/v./@調整;
 admire ,/v./@欽佩;,/v./@仰慕;
 adrift ,/adj./@漂浮著的;,/adj./@漂流著的;,/adv./@漂浮著;,/adv./@漂流著;
+advent ,/n./@出現;,/n./@到來;,/n./@降臨;
+Advent ,/n./@基督降臨;,/n./@基督降臨節;
 adverb ,/n./@副詞;
 advert ,/v./@引起註意;
 advice ,/n./@建議;
@@ -234,6 +236,7 @@ Canada ,/n./@加拿大;
 cancel ,/v./@取消;
 cancer ,/n./@癌症;
 Cancer ,/n./@巨蟹座;,/n./@巨蟹宫;,/n./@北回歸線;
+CanCon ,/redirected./@target="Canadian content";
 candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
@@ -1365,6 +1368,7 @@ sniper ,/n./@狙擊手;
 snitch ,/v./@告密;,/v./@偷;,/n./@告密者;
 snooty ,/adj./@傲慢的;,/adj./@自大的;,/adj./@目中無人的;
 snooze ,/v./@小睡;,/v./@打盹;
+snugly ,/adv./@緊貼地;,/adv./@貼身地;,/adv./@暖和舒適地;,/adv./@舒適地;,/adv./@緊貼合身地;,/adv./@严实地;
 soccer ,/n./@足球;
 social ,/adj./@社會的;
 socket ,/n./@插座;
