--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -25,6 +25,7 @@ addendum ,/n./@附錄;,/n./@附件;,/n./@補遺;
 addition ,/n./@添加;
 adequate ,/adj./@足够的;
 adherent ,/n./@追隨者;,/n./@擁護者;
+adhesive ,/adj./@有黏性的;,/adj./@黏著的;,/n./@黏著劑;,/n./@黏合劑;
 adjacent ,/adj./@邻近的;,/adj./@毗連的;,/adj./@相鄰的;,/adj./@鄰接的;
 admonish ,/v./@告誡;,/v./@勸告;
 adorable ,/adj./@可爱的;,/adj./@可敬的;
@@ -220,7 +221,7 @@ clitoris ,/n./@陰蒂;
 coalesce ,/v./@合併;,/v./@融合;,/v./@聯合;
 coherent ,/adj./@連貫的;,/adj./@粘著的;
 cohesion ,/n./@凝聚;,/n./@结合;
-cohesive ,/adj./@有粘性的;
+cohesive ,/adj./@有凝聚力的;,/adj./@凝聚性的;,/adj./@有結合力的;,/adj./@有黏著力的;,/adj./@有團結力的;
 coincide ,/v./@一致;,/n./@巧合;,/n./@同時發生;
 coliseum ,/n./@競技場;,/n./@大劇場;
 collapse ,/v./@坍塌;
@@ -405,7 +406,7 @@ duration ,/n./@持续;
 dynamite ,/n./@炸药;
 dyslexia ,/n./@诵读困难;
 dyslexic ,/adj./@诵读困难的;
-dystopia ,/n./@糟糕的社會;,/n./@地獄般的處境;
+dystopia ,/n./@糟糕的社會;,/n./@地獄般的處境;,/n./@反烏托邦;
 eclectic ,/adj./@兼收并蓄的;,/adj./@不拘一格的;,/adj./@相容並蓄的;,/adj./@博採眾長的;
 economic ,/adj./@经济学的;
 effluvia ,/n./@氣味;
