--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -24,6 +24,8 @@ adhere
 adjust
 admire
 adrift
+advent
+Advent
 adverb
 advert
 advice
@@ -234,6 +236,7 @@ Canada
 cancel
 cancer
 Cancer
+CanCon
 candid
 cannon
 cannot
@@ -1365,6 +1368,7 @@ sniper
 snitch
 snooty
 snooze
+snugly
 soccer
 social
 socket
